--- a/android-razor/build.gradle
+++ b/android-razor/build.gradle
@@ -3,10 +3,11 @@
 buildscript {
     repositories {
         jcenter()
+        maven { url "https://plugins.gradle.org/m2/"}
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.2.0'
-
+        classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -15,6 +16,7 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        mavenCentral()
     }
 }
 
