--- a/android-razor/app/build.gradle
+++ b/android-razor/app/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.google.protobuf:protobuf-lite:3.0.0'
     testCompile 'junit:junit:4.12'
+    compile 'com.android.support:design:24.2.1'
 }
 
 protobuf {
