--- a/android-razor/app/build.gradle
+++ b/android-razor/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.protobuf'
+apply plugin: 'android-apt'
 
 android {
     compileSdkVersion 24
@@ -29,6 +30,8 @@ dependencies {
     compile 'com.google.protobuf:protobuf-lite:3.0.0'
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:design:24.2.1'
+    compile 'com.github.hotchemi:permissionsdispatcher:2.2.0'
+    apt 'com.github.hotchemi:permissionsdispatcher-processor:2.2.0'
 }
 
 protobuf {
