More google cloud and firebase integration. Still doesn't do anything.

--- a/android-razor/app/build.gradle
+++ b/android-razor/app/build.gradle
@@ -21,6 +21,10 @@ android {
     }
 }
 
+repositories {
+    mavenCentral()
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
@@ -32,6 +36,9 @@ dependencies {
     compile 'com.android.support:design:24.2.1'
     compile 'com.github.hotchemi:permissionsdispatcher:2.2.0'
     apt 'com.github.hotchemi:permissionsdispatcher-processor:2.2.0'
+    compile 'com.facebook.android:facebook-android-sdk:4.+'
+
+    compile 'com.google.firebase:firebase-auth:9.6.1'
 }
 
 protobuf {
@@ -51,3 +58,5 @@ protobuf {
         }
     }
 }
+
+apply plugin: 'com.google.gms.google-services'
