--- a/android-razor/app/build.gradle
+++ b/android-razor/app/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     compile 'com.github.hotchemi:permissionsdispatcher:2.2.0'
     apt 'com.github.hotchemi:permissionsdispatcher-processor:2.2.0'
     compile 'com.facebook.android:facebook-android-sdk:4.+'
+    compile 'com.android.volley:volley:1.0.0'
 
     compile 'com.google.firebase:firebase-auth:9.6.1'
 }
