--- a/android-razor/app/build.gradle
+++ b/android-razor/app/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     apt 'com.github.hotchemi:permissionsdispatcher-processor:2.2.0'
     compile 'com.facebook.android:facebook-android-sdk:4.+'
     compile 'com.android.volley:volley:1.0.0'
+    compile 'org.greenrobot:eventbus:3.0.0'
 
     compile 'com.google.firebase:firebase-auth:9.6.1'
 }
