Continuation of efforts to use correct design patterns for communicating data. Here we are taking data processing out of the activity (it was not computing in main thread UI but the code was in activity) and into a service. This provides better life cycle because services can outlive activities.

--- a/android-razor/app/src/main/AndroidManifest.xml
+++ b/android-razor/app/src/main/AndroidManifest.xml
@@ -36,6 +36,8 @@
         <provider
             android:authorities="com.razorski.razor"
             android:name=".data.RazorDataProvider" />
+
+        <service android:name=".service.DataService" />
     </application>
 
 </manifest>
