--- a/android-razor/app/build.gradle
+++ b/android-razor/app/build.gradle
@@ -39,7 +39,7 @@ dependencies {
     compile 'com.facebook.android:facebook-android-sdk:4.+'
     compile 'com.android.volley:volley:1.0.0'
     compile 'org.greenrobot:eventbus:3.0.0'
-
+    compile 'com.google.firebase:firebase-database:9.8.0'
     compile 'com.google.firebase:firebase-auth:9.6.1'
 }
 
