I'm submitting this as-is. It contains some code from firebase database, but not that much (always diff with commit two times before this if you want a clean one. The reason for as-is submission is I want to get rid of some code and start doing fully integration with firebase (which means getting rid of sql content provider shit).

--- a/android-razor/app/src/main/AndroidManifest.xml
+++ b/android-razor/app/src/main/AndroidManifest.xml
@@ -37,12 +37,10 @@
         <activity android:name=".RecordSessionsActivity" />
 
         <provider
-            android:name=".data.RazorDataProvider"
+            android:name=".data.CloudDataProvider"
             android:authorities="com.razorski.razor" />
 
         <service android:name=".service.DataService" />
-
-        <activity android:name=".RecordSessionsActivity"></activity>
     </application>
 
 </manifest>
