--- a/android-razor/app/build.gradle
+++ b/android-razor/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     compile 'org.greenrobot:eventbus:3.0.0'
     compile 'com.google.firebase:firebase-database:9.8.0'
     compile 'com.google.firebase:firebase-auth:9.8.0'
+    compile 'com.google.firebase:firebase-crash:9.8.0'
 }
 
 protobuf {
